--- a/src/App.css
+++ b/src/App.css
@@ -8,23 +8,89 @@
     background-color: whitesmoke;
 }
 
+;
+
 .navBar {
     width: 300px;
     height: 100vh;
-    background-color: grey;
+    background-color: olivedrab;
     padding: 20px;
 }
+
+;
 
 .navBar h3 {
     margin: 0 0 20px 0;
 }
+
+;
 
 .navBar ul {
     list-style-type: none;
     padding: 0;
 }
 
+;
+
 .navBar li {
+    display: block;
+    width: 100%;
     margin: 10px 0;
-    cursor: pointer; /* Cambiado de wait a pointer */
+    cursor: pointer;
+    background-color: yellow;
+    border: black;
+    padding: 15px;
+    transition: background-color 0.3s ease;
 }
+
+;
+
+.navBar li:hover {
+    background-color: lightgray;
+}
+
+;
+
+.h1 {
+    display: flex;
+    justify-content: flex-start;
+    align-content: flex-start;
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
+}
+
+;
+
+.ProductCard {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    background-color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+;
+
+.ProductCard img {
+
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+;
+
+.ProductCard h3 {
+    margin: 10px 0;
+}
+
+;
+
+.ProductCard p {
+    margin: 10px 0;
+}
+
+;
+
